Início das páginas do participante e da promotora

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <!-- Formulário Login -->
-                        <form action="" method="POST">
+                        <form action="/login" method="POST">
                             <!-- Input E-mail -->
                             <div class="form-group row mb-0">
                                 <label for="email" class="col-sm-12 col-form-label"></label>
@@ -47,7 +47,6 @@
                                     <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
                                 </div>
                             </div>
-                            <br/>
                             <!-- Botão de Login -->
                             <div class="form-group row">
                                 <div class="col-md-12 text-center">
@@ -58,6 +57,7 @@
                     </div>
                 </div>  
             </div>
+        </section>
     </main>
     <script type="text/javascript" src="javascripts/jquery.js"></script>
     <script type="text/javascript" src="javascripts/bootstrap.js"></script>
