--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 d-flex justify-content-end text">
                     <a href="/login"> <button type="button" class="botao btn"> Login </button> </a>
-                    <a href="/cadastro"> <button type="button" class="botao ml-5 btn"> Cadastre-se </button> </a>
+                    <a href="#divCadastro"> <button type="button" class="botao ml-5 btn"> Cadastre-se </button> </a>
                 </div>
             </div>
         </div>
@@ -99,6 +99,29 @@
                         <!-- Imagem do Conteúdo -->
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <img src="images/transferindo_dinheiro.png" class="rounded float-right img" alt="icone">
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!-- Article "Facilidade Financeira" -->
+            <article class="shadow-sm p-3 mb-5 bg-white rounded">
+                <div class="container">
+                    <div id="divCadastro" class="row">
+                        <!-- Título e texto -->
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center">
+                            <h2 class="titulo">Cadastro Participante</h2>
+                        
+                            <div class="mt-5 mb-5 div-botao-section">
+                                <a href="/cadastroParticipante"> <button type="button" class="botao ml-5 btn"> Cadastre-se </button> </a>
+                            </div>
+                        </div>
+                        <!-- Imagem do Conteúdo -->
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center">
+                            <h2 class="titulo">Cadastro Promotora</h2>
+                        
+                            <div class="mt-5 mb-5 div-botao-section">
+                                <a href="/cadastroPromotora"> <button type="button" class="botao ml-5 btn"> Cadastre-se </button> </a>
+                            </div>
                         </div>
                     </div>
                 </div>
