--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <!-- Formulário Login -->
-                        <form action="/login" method="POST">
+                        <form action="/loginForm" method="POST">
                             <!-- Input E-mail -->
                             <div class="form-group row mb-0">
                                 <label for="email" class="col-sm-12 col-form-label"></label>
