--- a/views/cadastroPromotora.ejs
+++ b/views/cadastroPromotora.ejs
@@ -27,69 +27,8 @@
     <!-- Main -->
     <main>
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <h2 class="text-center titulo"> Cadastro Participante </h2>
-                        <!-- Formulário Cadastro Participante -->
-                        <form action="/cadastroParticipante" method="POST">
-                            <!-- Input Nome -->
-                            <div class="form-group row mb-0">
-                                <label for="nome" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome">
-                                </div>
-                            </div>
-                            <!-- Input CPF -->
-                            <div class="form-group row mb-0">
-                                <label for="cpf" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="Digite seu CPF">
-                                </div>
-                            </div>
-                            <!-- Input Telefone -->
-                            <div class="form-group row mb-0">
-                                <label for="telefone" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="number" class="form-control" id="telefone" name="telefone" placeholder="Digite seu telefone">
-                                </div>
-                            </div>
-                            <!-- Input CEP -->
-                            <div class="form-group row mb-0">
-                                <label for="cep" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="number" class="form-control" id="cep" name="cep" placeholder="Digite seu CEP">
-                                </div>
-                            </div>
-                            <!-- Input E-mail -->
-                            <div class="form-group row mb-0">
-                                <label for="email" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail">
-                                </div>
-                            </div>
-                            <!-- Input Senha -->
-                            <div class="form-group row mb-0">
-                                <label for="password" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
-                                </div>
-                            </div>
-                            <!-- Input Confirmar Senha -->
-                            <div class="form-group row">
-                                <label for="confirmpassword" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirme sua senha">
-                                </div>
-                            </div>
-                            <!-- Botão de Login -->
-                            <div class="form-group row">
-                                <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn w-100 botao"> Cadastrar </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
                     <div class="col-lg-6">
                         <h2 class="text-center titulo"> Cadastro Promotora </h2>
                         <!-- Formulário Cadastro Promotora -->
