--- a/views/cadastroParticipante.ejs
+++ b/views/cadastroParticipante.ejs
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS Externos -->
-    <link href="stylesheets/index.css" rel="stylesheet">
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="stylesheets/index.css" rel="stylesheet">
     <!-- Fonte Ballo Da 2 e Poppins -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Pangolin|Poppins&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
         <div id="container" class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <h2 class="titulo"> Gerenciador De Eventos </h2>
+                    <a href="/"> <h2 class="titulo"> Gerenciador De Eventos </h2> </a> 
                 </div>
             </div>
         </div>
@@ -37,49 +37,49 @@
                             <div class="form-group row mb-0">
                                 <label for="nome" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome">
+                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome" required>
                                 </div>
                             </div>
                             <!-- Input CPF -->
                             <div class="form-group row mb-0">
                                 <label for="cpf" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="Digite seu CPF">
+                                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="Digite seu CPF" required>
                                 </div>
                             </div>
                             <!-- Input Telefone -->
                             <div class="form-group row mb-0">
                                 <label for="telefone" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="number" class="form-control" id="telefone" name="telefone" placeholder="Digite seu telefone">
+                                    <input type="number" class="form-control" id="telefone" name="telefone" placeholder="Digite seu telefone" required>
                                 </div>
                             </div>
                             <!-- Input CEP -->
                             <div class="form-group row mb-0">
                                 <label for="cep" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="number" class="form-control" id="cep" name="cep" placeholder="Digite seu CEP">
+                                    <input type="number" class="form-control" id="cep" name="cep" placeholder="Digite seu CEP" required>
                                 </div>
                             </div>
                             <!-- Input E-mail -->
                             <div class="form-group row mb-0">
                                 <label for="email" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
                                 </div>
                             </div>
                             <!-- Input Senha -->
                             <div class="form-group row mb-0">
                                 <label for="password" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha" required>
                                 </div>
                             </div>
                             <!-- Input Confirmar Senha -->
                             <div class="form-group row">
                                 <label for="confirmpassword" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirme sua senha">
+                                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirme sua senha" required>
                                 </div>
                             </div>
                             <!-- Botão de Login -->
