--- a/views/cadastroPromotora.ejs
+++ b/views/cadastroPromotora.ejs
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS Externos -->
-    <link href="stylesheets/index.css" rel="stylesheet">
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="stylesheets/index.css" rel="stylesheet">
     <!-- Fonte Ballo Da 2 e Poppins -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Pangolin|Poppins&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
         <div id="container" class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <h2 class="titulo"> Gerenciador De Eventos </h2>
+                    <a href="/"> <h2 class="titulo"> Gerenciador De Eventos </h2> </a> 
                 </div>
             </div>
         </div>
@@ -32,75 +32,75 @@
                     <div class="col-lg-6">
                         <h2 class="text-center titulo"> Cadastro Promotora </h2>
                         <!-- Formulário Cadastro Promotora -->
-                        <form action="/cadastroPromotora" method="POST">
+                        <form action="/cadastroPromotoraForm" method="POST">
                             <!-- Input CNPJ -->
                             <div class="form-group row mb-0">
                                 <label for="cnpj" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="Digite o CNPJ">
+                                    <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="Digite o CNPJ" required>
                                 </div>
                             </div>
                             <!-- Input Nome Empresa -->
                             <div class="form-group row mb-0">
-                                <label for="nomeEmpresa" class="col-sm-12 col-form-label"></label>
+                                <label for="nome" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="nomeEmpresa" name="nomeEmpresa" placeholder="Digite o nome da Empresa">
+                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o nome da Empresa" required>
                                 </div>
                             </div>
                             <!-- Input Estado -->
                             <div class="form-group row mb-0">
                                 <label for="estado" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="estado" name="estado" placeholder="Digite o estado">
+                                    <input type="text" class="form-control" id="estado" name="estado" placeholder="Digite o estado" required>
                                 </div>
                             </div>
                             <!-- Input Cidade -->
                             <div class="form-group row mb-0">
                                 <label for="cidade" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Digite a cidade">
+                                    <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Digite a cidade" required>
                                 </div>
                             </div>
                             <!-- Input CEP Empresa -->
                             <div class="form-group row mb-0">
-                                <label for="cepEmpresa" class="col-sm-12 col-form-label"></label>
+                                <label for="cep" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cepEmpresa" name="cepEmpresa" placeholder="Digite o CEP">
+                                    <input type="text" class="form-control" id="cep" name="cep" placeholder="Digite o CEP" required>
                                 </div>
                             </div>
                             <!-- Input logradouro Empresa -->
                             <div class="form-group row mb-0">
-                                <label for="logradouroEmpresa" class="col-sm-12 col-form-label"></label>
+                                <label for="logradouro" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="logradouroEmpresa" name="logradouroEmpresa" placeholder="Digite o Logradouro">
+                                    <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Digite o Logradouro" required>
                                 </div>
                             </div>
                             <!-- Input número Empresa -->
                             <div class="form-group row mb-0">
-                                <label for="numeroEmpresa" class="col-sm-12 col-form-label"></label>
+                                <label for="numero" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="numeroEmpresa" name="numeroEmpresa" placeholder="Digite o Número">
+                                    <input type="text" class="form-control" id="numero" name="numero" placeholder="Digite o Número" required>
                                 </div>
                             </div>
                             <!-- Input E-mail -->
                             <div class="form-group row mb-0">
                                 <label for="email" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
                                 </div>
                             </div>
                             <!-- Input Senha -->
                             <div class="form-group row mb-0">
                                 <label for="password" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha" required>
                                 </div>
                             </div>
                             <!-- Input Confirmar Senha -->
                             <div class="form-group row">
                                 <label for="confirmpassword" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirme sua senha">
+                                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirme sua senha" required>
                                 </div>
                             </div>
                             <!-- Botão de Login -->
