--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS Externos -->
-    <link href="stylesheets/index.css" rel="stylesheet">
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="stylesheets/index.css" rel="stylesheet">
     <!-- Fonte Ballo Da 2 e Poppins -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Pangolin|Poppins&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
         <div id="container" class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <h2 class="titulo"> Gerenciador De Eventos </h2>
+                    <a href="/"> <h2 class="titulo"> Gerenciador De Eventos </h2> </a> 
                 </div>
             </div>
         </div>
