--- a/views/participante/conta.ejs
+++ b/views/participante/conta.ejs
@@ -32,47 +32,47 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h2 class="text-center titulo"> Editar Informações </h2>
                         <!-- Formulário Editar Informações -->
-                        <form action="/cadastroParticipante" method="POST">
+                        <form action="/editarParticipante" method="POST">
                             <!-- Input Nome -->
                             <div class="form-group row mb-0">
                                 <label for="nome" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome">
+                                    <input type="text" class="form-control" id="nome" name="nome" value="<%= usuario.nome %>" placeholder="Digite seu nome" required>
                                 </div>
                             </div>
                             <!-- Input CPF -->
                             <div class="form-group row mb-0">
                                 <label for="cpf" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="Digite seu CPF">
+                                    <input type="text" class="form-control" id="cpf" name="cpf" value="<%= usuario.cpf %>" placeholder="Digite seu CPF" required>
                                 </div>
                             </div>
                             <!-- Input Telefone -->
                             <div class="form-group row mb-0">
                                 <label for="telefone" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="number" class="form-control" id="telefone" name="telefone" placeholder="Digite seu telefone">
+                                    <input type="number" class="form-control" id="telefone" name="telefone" value="<%= usuario.telefone %>" placeholder="Digite seu telefone" required>
                                 </div>
                             </div>
                             <!-- Input CEP -->
                             <div class="form-group row mb-0">
                                 <label for="cep" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="number" class="form-control" id="cep" name="cep" placeholder="Digite seu CEP">
+                                    <input type="number" class="form-control" id="cep" name="cep" value="<%= usuario.cep %>" placeholder="Digite seu CEP" required>
                                 </div>
                             </div>
                             <!-- Input E-mail -->
                             <div class="form-group row mb-0">
                                 <label for="email" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail">
+                                    <input type="email" class="form-control" id="email" name="email" value="<%= usuario.e_mail %>" placeholder="Digite seu e-mail" required>
                                 </div>
                             </div>
                             <!-- Input Senha -->
                             <div class="form-group row mb-0">
                                 <label for="password" class="col-sm-12 col-form-label"></label>
                                 <div class="col-md-12">
-                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua nova senha">
                                 </div>
                             </div>
                             <!-- Input Confirmar Senha -->
@@ -87,9 +87,11 @@
                                 <div class="col-md-12 text-center mb-2">
                                     <button type="submit" class="btn w-100 botao"> Editar Informações </button>
                                 </div>
-                                <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn w-100 botao botaoVermelho"> Apagar Conta </button>
-                                </div>
+                            </div>
+                        </form>
+                        <form action="/apagarParticipante" method="POST">
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn w-100 botao botaoVermelho"> Apagar Conta </button>
                             </div>
                         </form>
                     </div>
