--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Gerenciador De Eventos </title>
+    <title> Eventos </title>
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
         <div id="container" class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <h2 class="titulo"> Gerenciador De Eventos </h2>
+                    <h2 class="titulo"> Eventos </h2>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 d-flex justify-content-end text">
                     <a href="/login"> <button type="button" class="botao btn"> Login </button> </a>
@@ -45,7 +45,7 @@
                                 dos eventos
                             </p>
                             <div class="div-botao-section">
-                                <a href="#" class="botao" title="Settings" data-toggle="modal"
+                                <a href="#" class="botao" style="color: white;" title="Settings" data-toggle="modal"
                                 data-target="#modalGerencieEventos">Leia mais</a>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                                 e conheça formas de otimizar seu tempo ao gerenciar seus eventos
                             </p>
                             <div class="div-botao-section">
-                                <a href="#" class="botao" title="Settings" data-toggle="modal"
+                                <a href="#" class="botao" style="color: white;" title="Settings" data-toggle="modal"
                                 data-target="#modalOtimizeTempo">Leia mais</a>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                                 e ações de maneira segura e prática
                             </p>
                             <div class="div-botao-section">
-                                <a href="#" class="botao" title="Settings" data-toggle="modal"
+                                <a href="#" class="botao" style="color: white;" title="Settings" data-toggle="modal"
                                 data-target="#modalFacilidadeFinanceira">Leia mais</a>
                             </div>
                         </div>
