--- a/views/participante/eventos.ejs
+++ b/views/participante/eventos.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Gerenciador De Eventos </title>
+    <title> Eventos </title>
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
     <header class="align-self-center shadow-sm p-3 mb-5 bg-white rounded">
         <div id="container" class="container">
             <div class="row">
-                <a href="/"> <h2 class="titulo"> Início Participante </h2> </a>
+                <a href="/"> <h2 class="titulo"> Participante </h2> </a>
             </div>
         </div>
     </header>
