--- a/public/stylesheets/promotora.css
+++ b/public/stylesheets/promotora.css
@@ -15,10 +15,7 @@ html{
     font-size: 1.1rem;
     font: sans-serif bold;
     color: grey;
-    text-align: justify;
-    line-height: 30px;
     font-family: 'Baloo Da 2', cursive;
-    margin: 30px 0 30px 0;
 }
 
 /* Sombra na parte inferior */
@@ -65,6 +62,15 @@ a:visited{
     font-family: 'Baloo Da 2', cursive;
 }
 
+.botaoForm{
+    border:none;
+    background-color: white;
+    color:rgb(96, 195, 171);
+}
+
+.botaoForm:hover{
+    cursor: pointer;
+}
 
 .botao:hover {
     background-color: rgb(96, 195, 171);
