--- a/views/cadastroParticipante.ejs
+++ b/views/cadastroParticipante.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Gerenciador De Eventos </title>
+    <title> Eventos </title>
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
         <div id="container" class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <a href="/"> <h2 class="titulo"> Gerenciador De Eventos </h2> </a> 
+                    <a href="/"> <h2 class="titulo"> Eventos </h2> </a> 
                 </div>
             </div>
         </div>
