--- a/views/promotora/criarEvento.ejs
+++ b/views/promotora/criarEvento.ejs
@@ -18,79 +18,89 @@
     <header class="align-self-center shadow-sm p-3 mb-5 bg-white rounded">
         <div id="container" class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text">
-                    <h2 class="titulo"> Gerenciador De Eventos </h2>
-                </div>
+                <a href="/"> <h2 class="titulo"> Promotora </h2> </a>
             </div>
         </div>
     </header>
     <!-- Main -->
     <main>
         <section>
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <h2 class="text-center titulo"> Criar Evento </h2>
-                        <!-- Formulário Cadastro Evento -->
-                        <form action="/cadastroPromotora" method="POST">
-                            <!-- Input Nome -->
-                            <div class="form-group row mb-0">
-                                <label for="nome" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o nome do evento">
-                                </div>
-                            </div>
-                            <!-- Input Tema -->
-                            <div class="form-group row mb-0">
-                                <label for="tema" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="tema" name="tema" placeholder="Digite o tema do evento">
-                                </div>
-                            </div>
-                            <!-- Input Edição -->
-                            <div class="form-group row mb-0">
-                                <label for="edicao" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="edicao" name="edicao" placeholder="Digite a edição do evento">
-                                </div>
-                            </div>
-                            <!-- Input data início -->
-                            <div class="form-group row mb-0">
-                                <label for="dataInicio" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="date" class="form-control" id="dataInicio" name="dataInicio" placeholder="Digite a data de início do evento">
-                                </div>
-                            </div>
-                            <!-- Input data fim -->
-                            <div class="form-group row mb-0">
-                                <label for="dataFim" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="date" class="form-control" id="dataFim" name="dataFim" placeholder="Digite a data de término do evento">
-                                </div>
-                            </div>
-                            <!-- Input CNPJ Organizadora -->
-                            <div class="form-group row mb-0">
-                                <label for="cnpjOrganizadora" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" id="cnpjOrganizadora" name="cnpj Organizadora" placeholder="Digite o CNPJ da Organizadora">
-                                </div>
-                            </div>
-                            <!-- Input Confirmar Senha -->
-                            <div class="form-group row">
-                                <label for="cnpjPromotora" class="col-sm-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input type="hidden" class="form-control" id="cnpjPromotora" name="cnpjPromotora">
-                                </div>
-                            </div>
-                            <!-- Botão para confirmar  -->
-                            <div class="form-group row">
-                                <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn w-100 botao"> Cadastrar Evento </button>
-                                </div>
-                            </div>
-                        </form>
+            <div id="container" class="container-fluid">
+                <div class="row">
+    
+                    <!-- Menu Lateral -->
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center text shadow-sm p-3 mb-5 bg-white rounded">
+                        <div class="titulo mb-4">
+                            <a href="/eventosPromotora" class="text"> Seus Eventos </a>
+                        </div>
+                        <div class="titulo mb-4">
+                            <a href="/criarEventoPromotora" class="text"> Criar Evento </a>
+                        </div>
+                        <div class="titulo">
+                            <a href="/contaPromotora" class="text"> Minha Conta </a>
+                        </div>
                     </div>
-                </div>  
+                    
+                    <!-- Corpo da página -->
+                    <div class="offset-1 col-lg-8 col-md-8 col-sm-11 col-xs-11 text shadow-sm p-3 mb-5 bg-white rounded">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <h2 class="text-center titulo"> Criar Evento </h2>
+                                <!-- Formulário Cadastro Evento -->
+                                <form action="/cadastroEvento" method="POST">
+                                    <!-- Input Nome -->
+                                    <div class="form-group row mb-0">
+                                        <label for="nome" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o nome do evento">
+                                        </div>
+                                    </div>
+                                    <!-- Input Tema -->
+                                    <div class="form-group row mb-0">
+                                        <label for="tema" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="tema" name="tema" placeholder="Digite o tema do evento">
+                                        </div>
+                                    </div>
+                                    <!-- Input Edição -->
+                                    <div class="form-group row mb-0">
+                                        <label for="edicao" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="edicao" name="edicao" placeholder="Digite a edição do evento">
+                                        </div>
+                                    </div>
+                                    <!-- Input data início -->
+                                    <div class="form-group row mb-0">
+                                        <label for="dataInicio" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="dataInicio" name="data_inicio" placeholder="Digite a de data início: aaaa-mm-dd">
+                                        </div>
+                                    </div>
+                                    <!-- Input data fim -->
+                                    <div class="form-group row mb-0">
+                                        <label for="dataFim" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="dataFim" name="data_fim" placeholder="Digite a data de fim: aaaa-mm-dd">
+                                        </div>
+                                    </div>
+                                    <!-- Input CNPJ Organizadora -->
+                                    <div class="form-group row mb-3">
+                                        <label for="cnpjOrganizadora" class="col-sm-12 col-form-label"></label>
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id="cnpjOrganizadora" name="cnpj" placeholder="Digite o CNPJ da Organizadora">
+                                        </div>
+                                    </div>
+                                    <!-- Botão para confirmar  -->
+                                    <div class="form-group row">
+                                        <div class="col-md-12 text-center">
+                                            <button type="submit" class="btn w-100 botao"> Cadastrar Evento </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
             </div>
         </section>
     </main>
